Add JSON5 to move ads into json file which is re-read each time, allowing for more randomness and dynamic ads

--- a/chat_bot/package.json
+++ b/chat_bot/package.json
@@ -12,6 +12,7 @@
     "@com1killer/hackmud-chat-api": "^1.0.3",
     "dotenv": "^16.4.5",
     "hackmud-chat": "^0.5.1",
+    "json5": "^2.2.3",
     "mongodb": "^6.6.0",
     "request": "^2.88.2"
   },
