--- a/package.json
+++ b/package.json
@@ -1,16 +1,21 @@
 {
 	"name": "hackmud-environment",
 	"license": "MIT",
+	"type": "module",
 	"scripts": {
 		"push": "hsm push src",
 		"dev": "hsm dev src --gen-types=player.d.ts",
 		"sync-macros": "hsm sync-macros",
 		"test": "hsm test src",
-		"gen-types": "hsm gen-types src"
+		"gen-types": "hsm gen-types src",
+		"lint": "eslint src"
 	},
 	"devDependencies": {
+		"@eslint/js": "^9.2.0",
+		"eslint": "^8.57.0",
 		"hackmud-script-manager": "0.20.1",
-		"typescript": "5.4.5"
+		"typescript": "^5.4.5",
+		"typescript-eslint": "^7.8.0"
 	},
 	"pnpm": {
 		"patchedDependencies": {
